--- a/index.html
+++ b/index.html
@@ -67,7 +67,8 @@
             <button class="swatch active" data-color="#1e1e2e" style="--sw-color:#1e1e2e" title="Dark"></button>
           </div>
           <div class="prop-row hex-input-row">
-            <span class="hex-preview" id="stroke-hex-preview" style="background:#1e1e2e"></span>
+            <span class="hex-preview" id="stroke-hex-preview" style="background:#1e1e2e" title="Pick color"></span>
+            <input type="color" id="stroke-color-picker" class="color-picker-hidden" value="#1e1e2e" tabindex="-1" />
             <input type="text" id="stroke-hex-input" class="hex-input" maxlength="7" placeholder="#1e1e2e" spellcheck="false" autocomplete="off" />
           </div>
         </div>
@@ -92,7 +93,8 @@
             </button>
           </div>
           <div class="prop-row hex-input-row">
-            <span class="hex-preview hex-preview--transparent" id="fill-hex-preview"></span>
+            <span class="hex-preview hex-preview--transparent" id="fill-hex-preview" title="Pick color"></span>
+            <input type="color" id="fill-color-picker" class="color-picker-hidden" value="#ffffff" tabindex="-1" />
             <input type="text" id="fill-hex-input" class="hex-input" maxlength="7" placeholder="transparent" spellcheck="false" autocomplete="off" />
           </div>
         </div>
