Add Supabase integration with authentication and board management features
- Introduced Supabase for user authentication and cloud storage.
- Added a board picker UI for managing boards within workspaces.
- Implemented functions for creating, renaming, and deleting boards.
- Created a loading and error handling overlay for user experience.
- Added environment configuration example for Supabase.
- Established CI/CD workflow for testing and deployment.

--- a/index.html
+++ b/index.html
@@ -271,7 +271,10 @@
         <button id="btn-export" title="Export JSON">⬇ Export</button>
         <button id="btn-import" title="Import JSON">⬆ Import</button>
         <div class="actions-divider"></div>
-        <button id="btn-theme" title="Toggle dark mode">☀️</button>
+        <!-- Board picker button injected here by boardPicker.ts -->
+        <div id="actions-bar" style="display:contents">
+          <button id="btn-theme" title="Toggle dark mode">☀️</button>
+        </div>
       </div>
     </div>
     <script type="module" src="/src/main.ts"></script>
